k8s/rust/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-rust-svc
spec:
  selector:
    app: rust
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
