k8s/rust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: rust.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-rust-svc
                port:
                  number: 8080
